<resources>
    <string name="app_name">Mix Design</string>

    <!--Original-->
    <!-- <string name="ad_unit_id">ca-app-pub-5474497946967422/8916710227</string>
    <string name="ad_app_id">ca-app-pub-5474497946967422~5203985489</string>
    <string name="ad_unit_id_inters">ca-app-pub-5474497946967422/5139572152</string>-->

    <!--Test Add-->
    <string name="ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ad_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="ad_unit_id_inters">ca-app-pub-3940256099942544/1033173712</string>

    <string-array name="slump_range">
        <item>30-50 mm</item>
        <item>80-100 mm</item>
        <item>150-180 mm</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="form_title">Mix Design Form</string>
    <string name="select_design_strength_of_concrete">Select Design Strength of Concrete</string>
    <string name="select_absorption_capacity_of_ca">Select Absorption Capacity of Coarse Agg</string>
    <string name="select_absorption_capacity_of_fa">Select Surface Moisture of Fine Agg</string>
    <string name="select_exposure">Select Environmental Exposure</string>
    <string name="select_concrete_type">Select Concrete Type</string>
    <string name="select_slump">Select Slump Value</string>
    <string name="select_air_entrained_type">Select Air Entrained Type</string>
    <string name="sp_gr_coarse">Specific Gravity of Coarse Agg.</string>
    <string name="sp_gr_fine">Specific Gravity of Fine Agg.</string>
    <string name="fineness_modulus">Fineness Modulus of Fine Agg.</string>
    <string name="dry_rodded_bulk_density">Dry Rodded Bulk Density of Coarse Agg.</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="title">Mix Design Title</string>
    <string name="max_size_of_aggregate">Maximum Size of Coarse Agg</string>
    <string name="documentation">Documentation</string>
    <string name="new_txt">New</string>

    <string name="definition">Concrete mix design is the process of finding right proportions of cement, sand and aggregates for concrete to achieve target strength in structures. So, concrete mix design can be stated as Concrete Mix = Cement:Sand:Aggregates\n\nThe concrete mix design involves various steps, calculations and laboratory testing to find right mix proportions.
</string>
    <string name="design_parameters">Design Parameters</string>
    <string name="design_stn">Design Strength</string>
    <string name="slump">Slump</string>
    <string name="concrete_type">Concrete Type</string>
    <string name="air_entrained_type">Air Entrained Type</string>
    <string name="exposure_cond">Exposure Condition</string>
    <string name="absorption_capacity_of_ca">Absorption Capacity of CA</string>
    <string name="moisture_content_of_fa">Surface Moisture of FA</string>
    <string name="calculation">Calculations</string>
    <string name="gen_pdf_file">Gen PDF File</string>
    <string name="gen_please_wait">Please Wait</string>


    <string-array name="ca_absorption_array">
        <item>0.5 %</item>
        <item>1.0 %</item>
        <item>1.5 %</item>
        <item>2.0 %</item>
        <item>2.5 %</item>
        <item>3.0 %</item>
    </string-array>

    <string-array name="fa_moisture_array">
        <item>0.5 %</item>
        <item>1.0 %</item>
        <item>1.5 %</item>
        <item>2.0 %</item>
        <item>2.5 %</item>
        <item>3.0 %</item>
        <item>3.5 %</item>
        <item>4.0 %</item>
    </string-array>

    <string-array name="exposure_array">
        <item>MILD</item>
        <item>MODERATE</item>
        <item>SEVERE</item>
        <item>VERY SEVERE</item>
        <item>EXTREME</item>
    </string-array>

    <string-array name="max_size_array">
        <item>10 mm</item>
        <item>12.5 mm</item>
        <item>20 mm</item>
        <item>25 mm</item>
        <item>40 mm</item>
        <item>50 mm</item>
        <item>70 mm</item>
        <item>150 mm</item>
    </string-array>

    <string-array name="concrete_type_array">
        <item>PLAIN CONCRETE</item>
        <item>REINFORCED CONCRETE</item>
    </string-array>

    <string-array name="air_concrete_type_array">
        <item>NON AIR_ENTRAINED</item>
        <item>AIR_ENTRAINED</item>
    </string-array>


    <string-array name="stn_array">
        <item>10 MPa</item>
        <item>15 MPa</item>
        <item>20 MPa</item>
        <item>25 MPa</item>
        <item>30 MPa</item>
        <item>35 MPa</item>
        <item>40 MPa</item>
        <item>45 MPa</item>
        <item>50 MPa</item>
        <item>55 MPa</item>
    </string-array>

</resources>
