<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.designForm.DesignFormFragment"
    app:cardElevation="@dimen/small">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/white"
        >

        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/usual"
            android:padding="@dimen/medium"
            android:textSize="@dimen/large_text"
            android:text="@string/form_title" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/light_gray"
            android:layout_marginStart="@dimen/usual"
            android:layout_marginEnd="@dimen/usual"/>

        <android.support.v4.widget.NestedScrollView
            android:layout_margin="@dimen/usual"
            android:padding="@dimen/small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ti_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/title"
                        android:inputType="text"

                        android:theme="@style/TIStyle" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ti_sp_gr_coarse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_sp_gr_coarse"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sp_gr_coarse"
                        android:inputType="numberDecimal"

                        android:theme="@style/TIStyle" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ti_sp_gr_fine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_sp_gr_fine"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sp_gr_fine"
                        android:inputType="numberDecimal"
                        android:theme="@style/TIStyle" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ti_fineness_modulus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_fineness_modulus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/fineness_modulus"
                        android:inputType="numberDecimal"
                        android:theme="@style/TIStyle" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ti_dry_rodded_bulk_density"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_dry_rodded_bulk_density"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/dry_rodded_bulk_density"
                        android:inputType="numberDecimal"
                        android:theme="@style/TIStyle" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_marginTop="@dimen/usual"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/small"
                    android:text="@string/select_design_strength_of_concrete"
                    android:textSize="@dimen/medium_text"/>

                <View style="@style/LineStyle" />

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/sp_design_stn"
                    style="@style/DesignFormSpinnerStyle" />

                <TextView
                    android:layout_marginTop="@dimen/usual"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/small"
                    android:text="@string/max_size_of_aggregate"
                    android:textSize="@dimen/medium_text"/>

                <View style="@style/LineStyle" />

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/sp_max_size_of_aggregate"
                    style="@style/DesignFormSpinnerStyle" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/small"
                    android:text="@string/select_slump"
                    android:textSize="@dimen/medium_text"/>

                <View style="@style/LineStyle" />

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/sp_slump"
                    style="@style/DesignFormSpinnerStyle"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/small"
                    android:text="@string/select_concrete_type"
                    android:textSize="@dimen/medium_text"/>

                <View style="@style/LineStyle" />

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/sp_concrete_type"
                    style="@style/DesignFormSpinnerStyle"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/small"
                    android:text="@string/select_air_entrained_type"
                    android:textSize="@dimen/medium_text"/>

                <View style="@style/LineStyle" />

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/sp_air_entrained"
                    style="@style/DesignFormSpinnerStyle"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/small"
                    android:text="@string/select_exposure"
                    android:textSize="@dimen/medium_text"/>

                <View style="@style/LineStyle" />

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/sp_exposure"
                    style="@style/DesignFormSpinnerStyle"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/small"
                    android:text="@string/select_absorption_capacity_of_ca"
                    android:textSize="@dimen/medium_text"/>

                <View style="@style/LineStyle" />

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/sp_absoption_capacity_of_ca"
                    style="@style/DesignFormSpinnerStyle"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/small"
                    android:text="@string/select_absorption_capacity_of_fa"
                    android:textSize="@dimen/medium_text"/>

                <View style="@style/LineStyle" />

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/sp_absoption_capacity_of_fa"
                    style="@style/DesignFormSpinnerStyle"/>



                <RelativeLayout
                    android:layout_marginTop="@dimen/usual"
                    android:padding="@dimen/medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/cancel"
                        android:text="@string/cancel"
                        style="@style/DangerTextStyle" />

                    <TextView
                        android:layout_alignParentEnd="true"
                        android:id="@+id/save"
                        android:text="@string/save"
                        style="@style/PositiveTextStyle"/>
                </RelativeLayout>



            </LinearLayout>



        </android.support.v4.widget.NestedScrollView>

    </LinearLayout>

</android.support.v7.widget.CardView>

